@startuml
class Usuario {
    + int Id
    + string Nome
    + string Email
    + string Senha
    --
    + Cadastrar()
    + Logar()
}

class Avaliacao {
    + int Id
    + int Nota
    + string Comentario
    + int UsuarioId
    + int DoramaId
    --
    + CriarAvaliacao()
    + EditarAvaliacao()
    + ExcluirAvaliacao()
}

class Dorama {
    + int Id
    + string Titulo
    + string Genero
    + string Descricao
    + ICollection<int> Episodios
    --
    + ListarEpisodios()
}

Usuario "1" -- "0..*" Avaliacao : "realiza"
Dorama "1" -- "0..*" Avaliacao : "é avaliado em"

@enduml
